# pyms-minerva

./: .bumpversion.cfg  .gitignore  .imgbotconfig  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  MANIFEST.in  README.md  README.rst  Submodule Dependencies.txt  __pkginfo__.py  appveyor.yml  build_docs.sh  changelog.rst  conf.py  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini  vagrant_render_notebooks.sh
.ci/: actions_build_conda.sh  actions_deploy_conda.sh  copy_pypi_2_github.py  travis_build_conda.sh  travis_deploy_conda.sh
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  mypy.yml  notebooks.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml
UserGuide/: 20_gcms_data_derived_objects.rst  30_data_filtering.rst  50_peak_alignment_by_dynamic_programming.rst  chapter01.rst  chapter02.rst  chapter03.rst  chapter04.rst  conf.py  data_filtering.rst  gcms_data_derived_objects.rst  gcms_raw_data_model.rst  index.rst  ipynb2rst.py  pandoc_downloader.py  peak_alignment_by_dynamic_programming.rst  peak_detection_and_representation.rst  requirements.txt
UserGuide/Contributing/: Building.rst  Source.rst  StyleGuide.rst
UserGuide/pyms/: Baseline.rst  BillerBiemann.rst  DPA.rst  Display.rst  Experiment.rst  GCMS.rst  Gapfill.rst  IntensityMatrix.rst  IonChromatogram.rst  MassSpectrum.rst  Mixins.rst  Noise.rst  Peak.rst  Scan.rst  Simulator.rst  Spectrum.rst  TopHat.rst  Utils.rst  documentation.rst
UserGuide/pyms-demo/: 20a.rst  20b.rst  20c.rst  20d.rst  20e.rst  30a.rst  30b.rst  30c.rst  31.rst  32.rst  40a.rst  40b.rst  41a.rst  41b.rst  41c.rst  41d.rst  42a.rst  42b.rst  43.rst  50.rst  51.rst  52.rst  53.rst  54.rst  55.rst  56.rst  60.rst  61a.rst  61b.rst  62.rst  63.rst  64.rst  70a.rst  70b.rst  70c.rst  71.rst  90.rst  91.rst  92.rst  93.rst  (+6 more)
UserGuide/pyms-test/: 20a.rst  20b.rst  20c.rst  20d.rst  30a.rst  30b.rst  30c.rst  31.rst  32.rst  40a.rst  40b.rst  41a.rst  41b.rst  42a.rst  42b.rst  43.rst  50.rst  51.rst  52.rst  53.rst  54.rst  60.rst  61a.rst  61b.rst  62.rst  63.rst  64.rst  70a.rst  70b.rst  71.rst  90.rst  91.rst  92.rst  93.rst  94.rst  95.rst  A1.rst  A2.rst  data-files.rst  introduction.rst  (+1 more)
deprecation-recipe/: meta.yaml
doc-source/: 10_gcms_raw_data_model.rst  20_gcms_data_derived_objects.rst  30_data_filtering.rst  40_peak_detection_and_representation.rst  50_peak_alignment_by_dynamic_programming.rst  60_display.rst  Building.rst  Source.rst  StyleGuide.rst  changelog.rst  chapter01.rst  chapter02.rst  conf.py  contributing.rst  index.rst  ipynb2rst.py  license.rst  pandoc_downloader.py  requirements.txt
doc-source/Contributing/: Source.rst  Tests.rst
doc-source/_static/: style.css
doc-source/demo_rst/: BaselineCorrection.rst  DPA.rst  Display_User_Interaction.rst  Displaying_Detected_Peaks.rst  Displaying_Mass_Spec.rst  Displaying_Multiple_IC.rst  Displaying_TIC.rst  Experiment.rst  IntensityMatrix.rst  IntensityMatrix_Preprocessing.rst  IntensityMatrix_Resizing.rst  IonChromatogram.rst  MassSpectrum.rst  Multiple_Experiments.rst  NoiseSmoothing.rst  Peak.rst  Peak_Area_Estimation.rst  Peak_Detection.rst  Peak_Filtering_Noise_Analysis.rst  comparing_datasets.rst  reading_andi.rst  reading_jcamp.rst
doc-source/logo/: PyMS.fig
doc-source/pyms/: Base.rst  BillerBiemann.rst  DPA.rst  Display.rst  Experiment.rst  GCMS.rst  Gapfill.rst  IntensityMatrix.rst  IonChromatogram.rst  Mixins.rst  Noise.rst  Peak.rst  Simulator.rst  Spectrum.rst  TopHat.rst  Utils.rst  documentation.rst  eic.rst  json.rst
doc-source/pyms-demo/: 70b.rst  71.rst  93.rst  94.rst  data-files.rst  introduction.rst
docs/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/UserGuide/: Examples.html  chapter01.html  chapter02.html  chapter03.html  chapter04.html  chapter05.html  chapter06.html  chapter07.html  chapter08.html  chapter09.html  chapter10.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/pyms/: documentation.html
docs/pyms-test/: introduction.html
pyms/: Base.py  BillerBiemann.py  DIsplay.py  Display.py  Experiment.py  IntensityMatrix.py  IonChromatogram.py  MassSpectrum.py  Mixins.py  Scan.py  Simulator.py  Spectrum.py  TopHat.py  __init__.py  base.py  compat.py  eic.py  json.py  version.py
pyms-data/: gc01_0812_066.jdx  nist08_test.jca
pyms-demo/: README  TODO  introduction.rst  ipynb2py.py  notebook_convert.py
pyms-demo/20a/: proc.py
pyms-demo/20b/: proc.py
pyms-demo/20c/: proc.py
pyms-demo/20d/: proc.py
pyms-demo/20e/: proc.py
pyms-demo/30a/: 30a.rst  proc.py
pyms-demo/30b/: proc.py
pyms-demo/30c/: 30c.rst  proc.py
pyms-demo/31/: 31.rst  proc.py
pyms-demo/32/: proc.py
pyms-demo/40a/: proc.py
pyms-demo/40b/: 40b.rst  proc.py
pyms-demo/41a/: proc.py
pyms-demo/41b/: proc.py
pyms-demo/41c/: proc.py
pyms-demo/41d/: proc.py
pyms-demo/42a/: 42a.rst  proc.py
pyms-demo/42b/: proc.py
pyms-demo/43/: proc.py
pyms-demo/50/: proc.py
pyms-demo/51/: proc.py
pyms-demo/52/: proc.py
pyms-demo/53/: proc.py
pyms-demo/54/: 54.rst  proc.py
pyms-docs/: genindex.html  searchindex.js
pyms-test/: introduction.rst
tests/: __init__.py  conftest.py  constants.py  copy_time.py  image_hashes.json  read_expr_list.txt  requirements.txt  setup.cfg  test_ANDI.py  test_BillerBiemann.py  test_DPA.py  test_Display.py  test_Experiment.py  test_IntensityMatrix.py  test_IonChromatogram.py  test_JCAMP.py  test_MassSpectrum.py  test_Noise_Analysis.py  test_Noise_SavitzkyGolay.py  test_Noise_Window.py  test_Peak.py  test_Peak_Function.py  test_Peak_List.py  test_Scan.py  test_TopHat.py  test_Utils_Math.py
tests2/: test_Peak.py  test_Peak_Function.py
tests_to_do/: test_DPA.py  test_Errors.py  test_Utils_Math.py  test_andi.py  test_diff.py  test_mzml.py
(+456 files in other folders)
